# sem4-2021-cpp-project

./: CMakeLists.txt  Constants.cpp  Constants.hpp  EventSource.cpp  EventSource.hpp  FiltersNodes.cpp  FiltersNodes.hpp  Pipeline.cpp  Pipeline.hpp  PipelineNode.cpp  PipelineNode.hpp  README.md  SingleThreadedContext.cpp  SingleThreadedContext.hpp  Spotters.cpp  Spotters.hpp  main.cpp
example/: CMakeLists.txt  Complex.cpp  SimpleColor.cpp
src/: CMakeLists.txt
src/tb/: Constants.cpp  Constants.hpp  DebugDraw.cpp  DebugDraw.hpp  FiltersNodes.cpp  FiltersNodes.hpp  FrameSource.cpp  FrameSource.hpp  MultiThreadedContext.cpp  MultiThreadedContext.hpp  Notifier.cpp  Notifier.hpp  PipelineContext.cpp  PipelineContext.hpp  Spotters.hpp
